
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int temp ;
struct timeval {scalar_t__ tv_usec; int tv_sec; } ;
struct TYPE_4__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; int sin_zero; } ;
struct sockaddr {int dummy; } ;
typedef int response ;
typedef int rem_addr ;
typedef int fd_set ;
struct TYPE_6__ {int * addr; } ;
struct TYPE_5__ {char* addr; } ;


 int AF_INET ;
 int FD_CLR (int,int *) ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int IPPROTO_TCP ;
 TYPE_3__* MISSED ;
 int MSG_DONTWAIT ;
 int REQUESTSIZE ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 int TIMEOUT ;
 TYPE_2__* TRASH ;
 int bzero (char*,int) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr const*,int) ;
 int exit (int) ;
 int fflush (int ) ;
 int findme (char*,int *) ;
 int fprintf (int ,char*) ;
 int get_host_ip (char*) ;
 int htons (unsigned short) ;
 scalar_t__ isalnum (char) ;
 int iscntrl (char) ;
 int make_spy_header (char*,unsigned short,char*,char*) ;
 int memset (int *,char,int) ;
 int perror (char*) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 scalar_t__ send (int,char*,int,int ) ;
 scalar_t__ setsockopt (int,int ,int ,char*,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int stdin ;
 int strlen (char*) ;
 char* strstr (char*,char*) ;

void spy_attr_options(char *hostname,unsigned short port,char *logbook)
{
 int soc;
 int ready;
 int yes = 0;
 char request[REQUESTSIZE];
 fd_set read_fd;
 struct timeval w_t;
 struct sockaddr_in rem_addr;
 int k,i = 0;
 int n = 0;
 char response[6900];
 char temp[100];
 char *p,*z;

        bzero(response,sizeof(response));
        bzero(temp,sizeof(temp));
        make_spy_header(hostname,port,request,logbook);
        w_t.tv_sec = TIMEOUT;
        w_t.tv_usec = 0;

         soc = socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
           if(soc < 0){
              perror("socket");
              exit(1);
            }
          if(setsockopt(soc,SOL_SOCKET,SO_REUSEADDR,(char *)&yes,sizeof(int)))
            { perror("setsockopt");
              close(soc);
              exit(1);
            }

    memset(&(rem_addr.sin_zero),'\0',8);
    rem_addr.sin_family = AF_INET;
    rem_addr.sin_port = htons(port);
    rem_addr.sin_addr.s_addr = get_host_ip(hostname);

         if(connect(soc,(const struct sockaddr*)&rem_addr,sizeof(rem_addr)))
          {
          fprintf(stderr,"[-] Can not Connect to server!\n");
          exit(1);
          }

         if( (send(soc,request,strlen(request),0)) < 0 )
          {
           perror("send");
           exit(-1);
           close(soc);
          }
             FD_CLR(soc,&read_fd);
             FD_ZERO(&read_fd);
             FD_SET(soc,&read_fd);

         if( (ready = select(soc+1,&read_fd,(fd_set *)((void*)0),(fd_set *)((void*)0),&w_t)) < 0)
          {
           perror("select read socket");
           close(soc);
           exit(1);
          }

         if(FD_ISSET(soc,&read_fd)){
            i = recv(soc, response, 100, 0);
             if (i < 0) {
              perror("Cannot receive response");
              exit(1);
              }

           n = i;
            while (i > 0) {
              i = recv(soc, response + n, 100, MSG_DONTWAIT);
              if (i > 0)
              n += i;
              if(i <= 0)
              break;
             }
           response[strlen(response)] = '\0';
           close(soc);
           fflush(stdin);



           for(i = 0 ; MISSED[i].addr != ((void*)0) ; i++) {
             {sprintf(temp,"Options %s =%c",MISSED[i].addr,0x20);};
              if((p = strstr(response,temp)) != ((void*)0)) {
                 z = TRASH[i].addr;
                 while( (!iscntrl(*p+1) || isalnum(*p+1))){
                    *z = *(char *)(p + strlen(temp));
                    z++;
                    p++;
                 }
              for(k = 0; TRASH[i].addr[k] ; k++) {
                  if((TRASH[i].addr[k] == ',') || (TRASH[i].addr[k] == '\n')) {
                     TRASH[i].addr[k] = '\0';
                   }
              }
              bzero(temp,sizeof(temp));
              }
           }

}
   return;

}
